--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -1,8 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+
   box-sizing: border-box;
 }
+
 html {
   background: $background-color;
 }
@@ -11,60 +13,88 @@ html {
 ::selection {
   background: $selection-color;
 }
+
 ::-moz-selection {
   background: $selection-color;
 }
+
 body {
   color: $text-color;
   font-family: $font-family-main;
   font-size: $font-size;
+
   word-wrap: break-word;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: .67em;
+
   font-family: $font-family-headings;
   line-height: 1.3;
-  margin-bottom: 0.67em;
+
   a {
     color: $text-color;
   }
 }
+
 h1 {
   font-size: 2.2em;
   line-height: 1.1;
 }
+
 h2 {
   font-size: 2em;
 }
+
 h3 {
   font-size: 1.5em;
 }
+
 h4 {
   font-size: 1.15em;
 }
+
 blockquote {
-    border-left: 5px darken($link-color, 15%) solid;
-    padding: 1em 1em;
-    background-color: lighten($brand-color, 40%);
+  padding: 1em;
+
+  border-left: 5px darken($link-color, 15%) solid;
+
+  background-color: lighten($brand-color, 40%);
 }
+
 blockquote p:last-child,
 footer p:last-child {
   margin-bottom: 0;
 }
+
 table {
-  table-layout:fixed;
-  width:100%;
-  word-wrap:break-word;
+  width: 100%;
+
+  table-layout: fixed;
+
+  word-wrap: break-word;
+
   @media (max-width: 1100px) {
-    overflow-x: scroll;
     display: inline-block;
+
+    overflow-x: scroll;
   }
 }
+
 td,
 th {
-  padding: 0.5em 1em;
+  padding: .5em 1em;
+
   border: 1px solid $border-color;
+
   text-align: left;
 }
+
 table,
 dl,
 blockquote,
@@ -74,61 +104,88 @@ pre,
 samp {
   margin: 1em 0;
 }
+
 pre {
-  padding:1em;
+  padding: 1em;
 }
+
 dt {
   font-weight: bold;
 }
+
 dd {
-    margin-left: 2em;
+  margin-left: 2em;
 }
-p, ol, ul, dl, .math-display {
-  line-height: 1.5;
+
+p,
+ol,
+ul,
+dl,
+.math-display {
   margin-bottom: 1em;
+
+  line-height: 1.5;
 }
+
 .math-display {
   display: inline-block;
+
   width: 100%;
 }
-ol, ul {
-  list-style-position: outside;
+
+ol,
+ul {
   padding-left: 1.5rem;
+
+  list-style-position: outside;
 }
 
 hr {
+  margin: 1em 0;
+
   border: 0;
   border-top: 1px solid $border-color;
   border-bottom: 1px solid #fff;
-  margin: 1em 0;
 }
+
 a {
   color: $link-color;
   text-decoration: none;
 
   :hover {
-//    @extend %link-hover;
+    //    @extend %link-hover;
   }
 }
+
 .nav {
-  list-style: none;
   margin: 0;
   padding: 0;
+
+  list-style: none;
 }
 // Responsive media
-iframe, img, embed, object, video {
+iframe,
+img,
+embed,
+object,
+video {
   max-width: 100%;
 }
+
 img[align=left] {
   margin-right: 3%;
 }
+
 img[align=right] {
   margin-left: 3%;
 }
+
 p {
   img:only-child {
-    margin: 0 auto;
     display: block;
+
+    margin: 0 auto;
+
     border: 1px $border-color solid;
   }
 }
