--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -1,21 +1,24 @@
 .site-footer {
   @extend %padding-regular;
   display: inline-block;
-  text-align: center;
   width: 100%;
   color: lighten($text-color, 30%);
-  font-size: 0.9em;
+  font-size: .9em;
+  text-align: center;
+
   ul {
-    margin:0 0 1em;
-    padding:0;
+    margin: 0 0 1em;
+    padding: 0;
     list-style-type: none;
+
     li {
-      list-style-type: none;
       display: inline-block;
+      list-style-type: none;
+
       a {
-        font-size:2em;
-        margin:0 0.25em 2em;
-        color:$header-desc-background-color;
+        margin: 0 .25em 2em;
+        color: $header-desc-background-color;
+        font-size: 2em;
       }
     }
   }
