--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,28 +1,35 @@
 // Typography
 $font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-family-headings: 'Cabin Sketch', 'Arial Black', serif, cursive;
-$font-size: 1.25rem;
+$font-size: 1.125rem;
+$font-size-h1: 2.2rem;
+$font-size-h2: 2rem;
+$font-size-h3: 1.5rem;
+$font-size-h4: 1.15rem;
+
 
 // Padding
 $padding-large: 15%;
 $padding-small: 5%;
-$padding-x-small: 3%;
+$padding-x-small: 1%;
 
 // Brand colours
-$brand-color: #FE5D26;
+$brand-color: #fe5d26;
 $background-color: #fff;
-$border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
+$border-color: rgba(0, 0, 0, .1); // rgba recommended if using feature images
 
 // Typography colours
 $text-color: #4a4a4a;
 $text-light: rgba($text-color, .5);
-$link-color: #A62A01;
-$selection-color: #D4D4D4; // visible when highlighting text
+$link-color: #a62a01;
+$link-color-hover: darken($link-color, 15%);
+$selection-color: #d4d4d4; // visible when highlighting text
+$form-border-color: #cfcfcf;
 
 // Other colours
 $header-link-color: rgb(230, 230, 230);
 $linked-border: 1px solid $link-color;
-$form-border: 1px solid #cfcfcf;
+$form-border: 1px solid $form-border-color;
 
 
 // Feature image for articles
@@ -31,5 +38,5 @@ $feature-image-text-light: rgba($feature-image-text-color, .7);
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
-$header-desc-background-color: #0070BB;
-$header-desc-text-color: #FFF;
+$header-desc-background-color: #0070bb;
+$header-desc-text-color: #fff;
