--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -24,9 +24,9 @@
 }
 
 %link-hover {
-  //  text-decoration: underline;
-  color: darken($link-color, 15%);
+  color: $link-color-hover;
 }
+
 // Buttons
 .button {
   display: inline-block;
@@ -36,7 +36,7 @@
   border-radius: .3em;
 }
 
-a.button:hover {
+.button:hover {
   border: $linked-border;
   background: $link-color;
   color: $background-color;
