added main elements;

--- a/_layouts/post-header.html
+++ b/_layouts/post-header.html
@@ -3,9 +3,9 @@
   {% include head.html %}
   <body>
     {% include header-post.html %}
-    <div class="content">
+    <main class="content">
       {{ content }}
-    </div>
+    </main>
     {% include footer.html %}
   </body>
 </html>
