--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -43,18 +43,18 @@ header {
 
 .feature-image {
   padding: 0;
-  
+
   .post-link {
     color: $feature-image-text-color;
   }
 
   header {
     margin-bottom: 0;
-    padding: $padding-large/2.8 $padding-large;
+    padding: ($padding-large / 2.8) $padding-large;
     background-position: center center;
     background-size: $feature-image-size;
     color: $feature-image-text-color;
-    
+
     .meta {
       color: $feature-image-text-light;
     }
@@ -62,47 +62,5 @@ header {
 
   .post-content {
     @extend %padding-regular;
-  }
-}
-
-.post-content {
-  form {
-    input[type="text"],
-    input[type="email"] {
-      display: block;
-      width: 100%;
-      margin: 0 0 1em;
-      padding: .5em;
-      border: $form-border;
-      border-radius: 6px;
-      box-shadow: none;
-    }
-
-    input[type="submit"] {
-      display: inline-block;
-      margin: 1em 0;
-      padding: .5em .75em;
-      border: $linked-border;
-      border-radius: .3em;
-      background-color: $brand-color;
-      color: $link-color;
-      
-      &:hover {
-        border: $linked-border;
-        background: $link-color;
-        color: $background-color;
-        text-decoration: none;
-      }
-    }
-
-    textarea {
-      display: block;
-      width: 100%;
-      margin: 0 0 1em;
-      padding: .5em;
-      border: $form-border;
-      border-radius: 6px;
-      box-shadow: none;
-    }
   }
 }
