semantic improvements and a sentence edits.

--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -7,7 +7,7 @@ layout: post-header
 
 <!-- Disqus -->
 {% if site.theme.disqus_shortname %}
-<div class="comments">
+<aside class="comments">
   {% include disqus.html %}
-</div>
+</aside>
 {% endif %}
