--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -14,7 +14,7 @@
     width: 100%;
 
     a {
-      color: $header-link-color;
+      color: $banner-link;
       font-size: 2.2em;
       text-transform: lowercase;
     }
