--- a/css/style.scss
+++ b/css/style.scss
@@ -22,3 +22,7 @@
 @import "includes/embeds";
 @import "includes/footer";
 @import "layout";
+
+// Components
+@import "components/icons";
+@import "components/nav";
