--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,22 +1,22 @@
 {% if site.theme.rss %}
 <li>
-	<a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="{{ site.theme.str_rss_follow }}">
-		<i class="fa fa-fw fa-rss"></i>
+	<a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="{{ site.theme.str_rss_follow }}" class="icon--social">
+		{% include social-icons/rss.svg %}
 	</a>
 </li>
 {% endif %}
 
 {% if site.theme.email_address %}
 <li>
-	<a href="mailto:{{ site.theme.email_address }}" title="{{ site.theme.str_email }}">
-		<i class="fa fa-fw fa-envelope"></i>
+	<a href="mailto:{{ site.theme.email_address }}" title="{{ site.theme.str_email }}" class="icon--social">
+		{% include social-icons/envelope.svg %}
 	</a>
 </li>
 {% endif %}
 
 {% if site.theme.behance %}
 <li>
-	<a href="https://www.behance.net/{{ site.theme.behance }}" title="{{ site.theme.str_follow_on }} Behance">
+	<a href="https://www.behance.net/{{ site.theme.behance }}" title="{{ site.theme.str_follow_on }} Behance" class="icon--social">
 		<i class="fa fa-fw fa-behance"></i>
 	</a>
 </li>
@@ -24,7 +24,7 @@
 
 {% if site.theme.bitbucket %}
 <li>
-	<a href="https://bitbucket.org/{{ site.theme.bitbucket }}" title="{{ site.theme.str_follow_on }} Bitbucket">
+	<a href="https://bitbucket.org/{{ site.theme.bitbucket }}" title="{{ site.theme.str_follow_on }} Bitbucket" class="icon--social">
 		<i class="fa fa-fw fa-bitbucket"></i>
 	</a>
 </li>
@@ -32,7 +32,7 @@
 
 {% if site.theme.dribbble %}
 <li>
-	<a href="https://dribbble.com/{{ site.theme.dribbble }}" title="{{ site.theme.str_follow_on }} Dribbble">
+	<a href="https://dribbble.com/{{ site.theme.dribbble }}" title="{{ site.theme.str_follow_on }} Dribbble" class="icon--social">
 		<i class="fa fa-fw fa-dribbble"></i>
 	</a>
 </li>
@@ -40,7 +40,7 @@
 
 {% if site.theme.facebook %}
 <li>
-	<a href="https://www.facebook.com/{{ site.theme.facebook }}" title="{{ site.theme.str_follow_on }} Facebook">
+	<a href="https://www.facebook.com/{{ site.theme.facebook }}" title="{{ site.theme.str_follow_on }} Facebook" class="icon--social">
 		<i class="fa fa-fw fa-facebook"></i>
 	</a>
 </li>
@@ -48,7 +48,7 @@
 
 {% if site.theme.flickr %}
 <li>
-	<a href="https://www.flickr.com/photos/{{ site.theme.flickr }}" title="{{ site.theme.str_follow_on }} Flickr">
+	<a href="https://www.flickr.com/photos/{{ site.theme.flickr }}" title="{{ site.theme.str_follow_on }} Flickr" class="icon--social">
 		<i class="fa fa-fw fa-flickr"></i>
 	</a>
 </li>
@@ -56,15 +56,15 @@
 
 {% if site.theme.github %}
 <li>
-	<a href="https://github.com/{{ site.theme.github }}" title="{{ site.theme.str_follow_on }} GitHub">
-		<i class="fa fa-fw fa-github"></i>
+	<a href="https://github.com/{{ site.theme.github }}" title="{{ site.theme.str_follow_on }} GitHub" class="icon--social">
+		{% include social-icons/github.svg %}
 	</a>
 </li>
 {% endif %}
 
 {% if site.theme.google_plus %}
 <li>
-	<a href="https://plus.google.com/{{ site.theme.google_plus }}" title="{{ site.theme.str_follow_on }} Google+">
+	<a href="https://plus.google.com/{{ site.theme.google_plus }}" title="{{ site.theme.str_follow_on }} Google+" class="icon--social">
 		<i class="fa fa-fw fa-google-plus"></i>
 	</a>
 </li>
@@ -72,7 +72,7 @@
 
 {% if site.theme.instagram %}
 <li>
-	<a href="http://instagram.com/{{ site.theme.instagram }}" title="{{ site.theme.str_follow_on }} Instagram">
+	<a href="http://instagram.com/{{ site.theme.instagram }}" title="{{ site.theme.str_follow_on }} Instagram" class="icon--social">
 		<i class="fa fa-fw fa-instagram"></i>
 	</a>
 </li>
@@ -80,15 +80,15 @@
 
 {% if site.theme.linkedin %}
 <li>
-	<a href="{{ site.theme.linkedin }}" title="{{ site.theme.str_follow_on }} LinkedIn">
-		<i class="fa fa-fw fa-linkedin"></i>
+	<a href="{{ site.theme.linkedin }}" title="{{ site.theme.str_follow_on }} LinkedIn" class="icon--social">
+		{% include social-icons/linkedin.svg %}
 	</a>
 </li>
 {% endif %}
 
 {% if site.theme.pinterest %}
 <li>
-	<a href="http://www.pinterest.com/{{ site.theme.pinterest }}" title="{{ site.theme.str_follow_on }} Pinterest">
+	<a href="http://www.pinterest.com/{{ site.theme.pinterest }}" title="{{ site.theme.str_follow_on }} Pinterest" class="icon--social">
 		<i class="fa fa-fw fa-pinterest"></i>
 	</a>
 </li>
@@ -96,7 +96,7 @@
 
 {% if site.theme.reddit %}
 <li>
-	<a href="https://www.reddit.com/user/{{ site.theme.reddit }}" title="{{ site.theme.str_follow_on }} Reddit">
+	<a href="https://www.reddit.com/user/{{ site.theme.reddit }}" title="{{ site.theme.str_follow_on }} Reddit" class="icon--social">
 		<i class="fa fa-fw fa-reddit"></i>
 	</a>
 </li>
@@ -104,7 +104,7 @@
 
 {% if site.theme.soundcloud %}
 <li>
-	<a href="https://soundcloud.com/{{ site.theme.soundcloud }}" title="{{ site.theme.str_follow_on }} SoundCloud">
+	<a href="https://soundcloud.com/{{ site.theme.soundcloud }}" title="{{ site.theme.str_follow_on }} SoundCloud" class="icon--social">
 		<i class="fa fa-fw fa-soundcloud"></i>
 	</a>
 </li>
@@ -112,15 +112,15 @@
 
 {% if site.theme.stack_exchange %}
 <li>
-	<a href="{{ site.theme.stack_exchange }}" title="{{ site.theme.str_follow_on }} Stack Exchange">
-		<i class="fa fa-fw fa-stack-exchange"></i>
+	<a href="{{ site.theme.stack_exchange }}" title="{{ site.theme.str_follow_on }} Stack Exchange" class="icon--social">
+		{% include social-icons/stack-exchange.svg %}
 	</a>
 </li>
 {% endif %}
 
 {% if site.theme.steam %}
 <li>
-	<a href="http://steamcommunity.com/id/{{ site.theme.steam }}" title="{{ site.theme.str_follow_on }} Steam">
+	<a href="http://steamcommunity.com/id/{{ site.theme.steam }}" title="{{ site.theme.str_follow_on }} Steam" class="icon--social">
 		<i class="fa fa-fw fa-steam"></i>
 	</a>
 </li>
@@ -128,7 +128,7 @@
 
 {% if site.theme.tumblr %}
 <li>
-	<a href="http://{{ site.theme.tumblr }}.tumblr.com/" title="{{ site.theme.str_follow_on }} Tumblr">
+	<a href="http://{{ site.theme.tumblr }}.tumblr.com/" title="{{ site.theme.str_follow_on }} Tumblr" class="icon--social">
 		<i class="fa fa-fw fa-tumblr"></i>
 	</a>
 </li>
@@ -136,15 +136,15 @@
 
 {% if site.theme.twitter %}
 <li>
-	<a href="https://twitter.com/{{ site.theme.twitter }}" title="{{ site.theme.str_follow_on }} Twitter">
-		<i class="fa fa-fw fa-twitter"></i>
+	<a href="https://twitter.com/{{ site.theme.twitter }}" title="{{ site.theme.str_follow_on }} Twitter" class="icon--social">
+		{% include social-icons/twitter.svg %}
 	</a>
 </li>
 {% endif %}
 
 {% if site.theme.wordpress %}
 <li>
-	<a href="https://{{ site.theme.wordpress }}.wordpress.com/" title="{{ site.theme.str_follow_on }} WordPress">
+	<a href="https://{{ site.theme.wordpress }}.wordpress.com/" title="{{ site.theme.str_follow_on }} WordPress" class="icon--social">
 		<i class="fa fa-fw fa-wordpress"></i>
 	</a>
 </li>
@@ -152,7 +152,7 @@
 
 {% if site.theme.youtube %}
 <li>
-	<a href="https://www.youtube.com/user/{{ site.theme.youtube }}" title="{{ site.theme.str_follow_on }} YouTube">
+	<a href="https://www.youtube.com/user/{{ site.theme.youtube }}" title="{{ site.theme.str_follow_on }} YouTube" class="icon--social">
 		<i class="fa fa-fw fa-youtube"></i>
 	</a>
 </li>
