--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -35,7 +35,7 @@ header {
   .meta {
     margin: 0;
     color: $text-light;
-    font-size: .6em;
+    font-size: $font-size-small;
     letter-spacing: .1em;
     text-transform: uppercase;
   }
