header updates, renamed files, new mixin file.

--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,5 +1,5 @@
 <header class="l-header">
-  <nav class="site-nav l-flex-spread">
+  <nav class="nav--main l-flex-spread">
     <a href="{{ site.baseurl }}/" class="h1">{{ site.theme.title }}</a>
     <ul class="l-inline-menu l-list-inline">
       {% for page in site.pages %}
