--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <header class="l-header">
-  <nav class="site-nav l-flex-spread">
-    <a href="{{ site.baseurl }}/" class="h1">{{ site.theme.title }}</a>
-    <ul class="l-inline-menu l-list-inline">
+  <nav class="nav--main">
+    <ul class="l-list-inline text--right">
       {% for page in site.pages %}
       {% if page.title and page.hide != true %}
       <li>
@@ -13,6 +12,7 @@
       {% endfor %}
     </ul>
   </nav>
+  <a href="{{ site.baseurl }}/" class="h1">{{ site.theme.title }}</a>
 
   <div class="call-out" 
   style="background-image: url('{{ site.baseurl }}/{{ site.theme.header_text_feature_image }}')">
