--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -10,11 +10,6 @@ html {
 }
 
 // Typography
-::-moz-selection,
-::selection {
-  background: $selection-color;
-}
-
 body {
   color: $text-color;
   font-family: $font-family-main;
@@ -23,6 +18,7 @@ body {
 }
 
 h1,
+.h1,
 h2,
 h3,
 h4,
@@ -38,7 +34,8 @@ h6 {
   }
 }
 
-h1 {
+h1,
+.h1 {
   font-size: $font-size-h1;
   line-height: 1.1;
 }
@@ -146,20 +143,12 @@ hr {
 
 a {
   color: $link-color;
-  text-decoration: none;
 
-  &:hover,
-  &:focus {
+  @include haf {
     color: $link-color-hover;
   }
 }
 
-.nav {
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
-}
 // Responsive media
 iframe,
 img,
@@ -221,4 +210,8 @@ textarea {
   border: $form-border;
   border-radius: 6px;
   box-shadow: none;
+}
+
+@include selection {
+  background: $selection-color;
 }
