--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,13 +9,13 @@
 $font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-family-headings: 'Cabin Sketch', 'Arial Black', serif, cursive;
 $font-size: 1.125rem;
-$font-size-h1: 2.2rem;
+$font-size-h1: 2.5rem;
 $font-size-h2: 2rem;
 $font-size-h3: 1.5rem;
 $font-size-h4: 1.15rem;
 
 $font-size-base: 1rem;
-$font-size-small: .875rem;
+$font-size-small: 80%;
 
 // Padding
 $padding-large: 15%;
