--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -1,62 +1,50 @@
 * {
   margin: 0;
   padding: 0;
-
   box-sizing: border-box;
 }
 
-html {
-  background: $background-color;
-}
+html { background: $background-color; }
 
-// Typography
 body {
   color: $text-color;
   font-family: $font-family-main;
   font-size: $font-size-base;
-  word-wrap: break-word;
 }
 
-h1,
-.h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: .5em;
-
+%heading {
   font-family: $font-family-headings;
   line-height: 1.3;
-
-  a {
-    color: $text-color;
-  }
 }
 
 h1,
 .h1 {
+  @extend %heading;
   font-size: $font-size-h1;
   line-height: 1.1;
 }
 
 h2 {
+  @extend %heading;
   font-size: $font-size-h2;
 }
 
 h3 {
+  @extend %heading;
   font-size: $font-size-h3;
 }
 
 h4 {
+  @extend %heading;
   font-size: $font-size-h3;
 }
 
+h5,
+h6 { @extend %heading; }
+
 blockquote {
   padding: 1em;
-
   border-left: 5px darken($link-color, 15%) solid;
-
   background-color: lighten($color-primary, 40%);
 }
 
