--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,7 +1,6 @@
-<header class="l-header">
-  <nav class="nav--main l-flex-spread">
-    <a href="{{ site.baseurl }}/" class="h1">{{ site.theme.title }}</a>
-    <ul class="l-inline-menu l-list-inline">
+<header class="header text-center">
+  <nav class="nav--main">
+    <ul class="l-list-inline text--right">
       {% for page in site.pages %}
       {% if page.title and page.hide != true %}
       <li>
@@ -13,10 +12,7 @@
       {% endfor %}
     </ul>
   </nav>
-
-  <div class="call-out" 
-  style="background-image: url('{{ site.baseurl }}/{{ site.theme.header_text_feature_image }}')">
-    <div class="divider"></div>
-    <h1 class="title">{{ page.title }}</h1>
-  </div>
+  <a href="{{ site.baseurl }}/" class="h1">{{ site.theme.title }}</a>
+  <div class="divider"></div>
+  <h1 class="title">{{ page.title }}</h1>
 </header>
