Header style work and fixed SVG stuff on thank you page.

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -13,7 +13,7 @@ body {
 }
 
 %heading {
-  margin: 0 0 .5em;
+  margin: .25em 0 .75em;
   font-family: $font-family-headings;
   line-height: 1.3;
 }
