--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,6 +17,8 @@ $font-size-h4: 1.15rem;
 $font-size-base: 1rem;
 $font-size-small: 80%;
 
+$line-height-base: 1.4;
+
 // Padding
 $padding-large: 15%;
 $padding-small: 5%;
