set simple link.

--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -12,7 +12,7 @@
       {% endfor %}
     </ul>
   </nav>
-  <a href="{{ site.baseurl }}/" class="h1">{{ site.theme.title }}</a>
+  <a href="{{ site.baseurl }}/" class="h1 link--simple">{{ site.theme.title }}</a>
   <div class="divider"></div>
   <h1 class="title">{{ page.title }}</h1>
 </header>
