--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       {% endfor %}
     </ul>
   </nav>
-  <h1><a href="{{ site.baseurl }}/">{{ site.theme.title }}</a></h1>
+  <h1><a href="{{ site.baseurl }}/" class="link--simple">{{ site.theme.title }}</a></h1>
   
   {% if site.theme.header_text %}
     {{ site.theme.header_text }}
