--- a/css/style.scss
+++ b/css/style.scss
@@ -30,7 +30,8 @@
 @import "layout";
 
 // Components
-@import "components/icons";
 @import "components/header";
+@import "components/icons";
+@import "components/images";
 @import "components/nav";
 @import "components/pager";
