--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -47,7 +47,7 @@ header {
     margin-bottom: 0;
     padding: ($padding-large / 2.8) $padding-large;
     background-position: center center;
-    background-size: $feature-image-size;
+    background-size: $feature-bg-size;
     color: $feature-image-text-color;
 
     .meta {
