--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: post-header
       {% if page.audio %}
       <audio controls="controls">
         <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
+        <p>Please use a new browser version to hear the audio recording.</p>
       </audio>
       {% endif %}
     </header>
