--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -1,7 +1,7 @@
 ---
 layout: post-header
 ---
-<article {% if page.feature-img %}class="feature-image"{% endif %}>
+<article class="article article--full">
   <section class="post-content link-post">{{ content }}</section>
 </article>
 
