--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 
 {% if site.theme.footer_text %}
-<footer class="site-footer">
+<footer class="l-footer">
   <p class="text">{{ site.theme.footer_text }}</p>
 </footer>
 {% endif %}
