--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,16 +1,18 @@
-<header class="header text-center">
-  <nav class="nav--main">
-    <ul class="l-list-inline text--right">
-      {% for page in site.pages %}
-      {% if page.title and page.hide != true %}
-      <li>
-        <a href="{{ page.url | prepend: site.baseurl }}">
-          {{ page.title }}
-        </a>
-      </li>
-      {% endif %}
-      {% endfor %}
-    </ul>
-  </nav>
-  <a href="{{ site.baseurl }}/" class="h1 link--simple">{{ site.theme.title }}</a>
+<header class="l-header text-center">
+  <div class="l-container">
+    <nav class="nav--main">
+      <ul class="l-list-inline text--right">
+        {% for page in site.pages %}
+        {% if page.title and page.hide != true %}
+        <li>
+          <a href="{{ page.url | prepend: site.baseurl }}">
+            {{ page.title }}
+          </a>
+        </li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </nav>
+    <a href="{{ site.baseurl }}/" class="h1 link--simple">{{ site.theme.title }}</a>
+  </div>
 </header>
