--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    <main class="content">
+    <main class="content l-container">
       {{ content }}
     </main>
     {% include footer.html %}
