--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,6 +1,15 @@
 ---
 layout: post-header
 ---
-<article {% if page.feature-img %}class="feature-image"{% endif %}>
-  <section class="post-content">{{ content }}</section>
+<article class="article article--full">
+  <header>
+    <h1 class="title">{{ page.title }}</h1>
+    {% if page.audio %}
+    <audio controls="controls">
+      <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
+      <p>Please use a new browser version to hear the audio recording.</p>
+    </audio>
+    {% endif %}
+  </header>
+  {{ content }}
 </article>
