--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: post-header
 ---
-<article {% if page.feature-img %}class="feature-image"{% endif %}>
+<article class="article article--full">
   <section class="post-content">
     <header>
       <h1 class="title">{{ page.title }}</h1>
