--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,48 @@
+.l-header,
+main,
+.l-footer {
+  @include padding(null $gutter);
+  margin-bottom: $gutter;
+}
+
+
+.l-footer {
+  display: inline-block;
+  width: 100%;
+  color: $text-color;
+  text-align: center;
+}
+
+// Main layout
+.l-container {
+  @include outer-container;
+}
+
 .l-flex-grid {
+  @include row;
   display: flex;
   flex-wrap: wrap;
   padding: 0;
+
+  li {
+    display: block;
+    margin-bottom: $gutter;
+    float: left;
+    background-size: $feature-bg-size;
+
+    @media (min-width:768px) {
+      width: calc(50% - (#{$gutter} / 2));
+      margin-right: $gutter;
+
+      &:nth-of-type(2n) {
+        margin-right: 0;
+      }
+    }
+
+    &:first-child {
+      padding-top: 0;
+    }
+  }
 }
 
 .l-list-inline {
