--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -1,19 +1,3 @@
 .nav--main {
-  font-size: $font-size-small;
-
-  @media (min-width: $bp-hands) {
-    font-size: inherit;
-  }
-
-  ul {
-    list-style: none;
-  }
-
-  li {
-    display: inline-block;
-  }
-
-  a {
-    margin-bottom: .5rem;
-  }
+  margin-bottom: $gutter;
 }
