--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -1,22 +1,13 @@
-article,
+.article,
 .comments {
-  width: 100%;
-  padding: 1rem 20% 0;
-  float: left;
+  @include margin(null auto);
+  max-width: $reading-width;
 }
 
-article {
+.article {
   header {
     margin-bottom: 6%;
     text-align: center;
-  }
-
-  a:hover {
-    @extend %link-hover;
-  }
-
-  .footnotes {
-    font-size: $font-size-small;
   }
 
   p {
@@ -24,38 +15,5 @@ article {
       margin: 0 auto;
       text-align: center;
     }
-  }
-}
-
-header {
-  .meta {
-    margin: 0;
-    color: $text-light;
-    font-size: $font-size-small;
-    letter-spacing: .1em;
-  }
-}
-
-.feature-image {
-  padding: 0;
-
-  .post-link {
-    color: $feature-image-text-color;
-  }
-
-  header {
-    margin-bottom: 0;
-    padding: ($padding-large / 2.8) $padding-large;
-    background-position: center center;
-    background-size: $feature-bg-size;
-    color: $feature-image-text-color;
-
-    .meta {
-      color: $feature-image-text-light;
-    }
-  }
-
-  .post-content {
-    @extend %padding-regular;
   }
 }
