--- a/css/style.scss
+++ b/css/style.scss
@@ -1,37 +1,47 @@
 ---
 ---
 
-// External
+// Normalize
+// **********
 @import "vendor/reset";
+
+// Variables
+// **********
+@import "variables";
+
+// External
+// *********
+// Code highlighter
 @import "vendor/solarized-dark";
+// Bourbon and Neat mixins
 @import "vendor/bourbon/bourbon";
-@import "vendor/neat/neat-helpers";
 @import "vendor/neat/neat";
 
 // Utilities
+// **********
 @import "utilities/helpers";
 @import "utilities/mixins";
 
-// Variables and Mixins
-@import "variables";
-
 // Base
+// *****
 @import "base/base";
 @import "base/typography";
 @import "base/utility";
 
-// Posts
-@import "layouts/posts";
-@import "layouts/index";
-
-// Partials
-@import "includes/embeds";
-@import "includes/footer";
+// Layout
+// *******
 @import "layout";
+@import "layouts/posts";
 
 // Components
+// ***********
+@import "includes/embeds";
+@import "includes/footer";
+@import "components/feature";
 @import "components/header";
 @import "components/icons";
 @import "components/images";
+@import "components/list";
 @import "components/nav";
 @import "components/pager";
+@import "components/section";
