layout fixes and work page updates.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 ---
 layout: post-header
 ---
-<article>
+<article class="l-reading">
   <section class="post-content">{{ content }}</section>
 </article>
