--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: post-header
 ---
-<article class="article article--full">
+<article class="l-reading">
   <header>
     <h1 class="title">{{ page.title }}</h1>
     {% if page.audio %}
