--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: post-header
 ---
-<article class="article article--full">
+<article class="l-reading">
   <section class="post-content">
     <header>
       <h1 class="title">{{ page.title }}</h1>
