--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -4,7 +4,10 @@
   box-sizing: border-box;
 }
 
-html { background: $background-color; }
+html {
+  background: $background-color;
+  font-size: $em-base;
+}
 
 body {
   color: $text-color;
