--- a/_sass/utilities/_helpers.scss
+++ b/_sass/utilities/_helpers.scss
@@ -4,3 +4,8 @@
   @include margin(null auto);
   display: block;
 }
+
+.u-divide + .u-divide {
+  padding-top: $gutter;
+  border-top: $default-border;
+}
