Replaced old post styles with simpler layout class.

--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -1,13 +1,13 @@
 ---
 layout: post-header
 ---
-<article class="article article--full">
+<article class="article l-reading">
   <section class="post-content link-post">{{ content }}</section>
 </article>
 
 <!-- Disqus -->
 {% if site.theme.disqus_shortname %}
-<aside class="comments">
+<aside class="l-reading">
   {% include disqus.html %}
 </aside>
 {% endif %}
