--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: post-header
 
 <!-- Disqus -->
 {% if site.theme.disqus_shortname %}
-<aside class="comments">
+<aside class="l-reading">
   {% include disqus.html %}
 </aside>
 {% endif %}
