Layout updates. Link post updated. Etc.

--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,4 +1,4 @@
-<header class="l-header text-center">
+<header class="header text-center">
   <div class="l-container">
     <nav class="nav--main">
       <ul class="l-list-inline text--right">
