--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,17 +1,6 @@
-.l-header,
+.header,
 main,
-.l-footer {
-  @include padding(null $gutter);
-  margin-bottom: $gutter;
-}
-
-
-.l-footer {
-  display: inline-block;
-  width: 100%;
-  color: $text-color;
-  text-align: center;
-}
+.footer { margin-bottom: $gutter; }
 
 // Main layout
 .l-container {
@@ -19,8 +8,14 @@ main,
 }
 
 .l-reading {
-  @include margin(null auto);
-  max-width: $reading-width;
+  @include pad;
+
+  @media (min-width:$bp-hands-wide) {
+    @include span-columns(10 of 12);
+    @include shift(1);
+  }
+
+  header { text-align: center; }
 }
 
 .l-flex-grid {
