--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -41,7 +41,7 @@ h3 {
 
 h4 {
   @extend %heading;
-  font-size: $font-size-h3;
+  font-size: $font-size-h4;
 }
 
 h5,
@@ -95,8 +95,10 @@ p,
 ol,
 ul,
 dl,
+audio,
+video,
 .math-display {
-  margin-bottom: 1em;
+  margin-bottom: $gutter;
 }
 
 .math-display {
