--- a/css/style.scss
+++ b/css/style.scss
@@ -34,8 +34,8 @@
 
 // Components
 // ***********
-@import "includes/embeds";
-@import "includes/footer";
+@import "components/embeds";
+@import "components/footer";
 @import "components/feature";
 @import "components/header";
 @import "components/icons";
@@ -44,3 +44,4 @@
 @import "components/nav";
 @import "components/pager";
 @import "components/section";
+@import "components/teaser";
