--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -1,8 +1,22 @@
 ---
 layout: post-header
 ---
-<article class="article l-reading">
-  <section class="post-content link-post">{{ content }}</section>
+<article class="l-reading">
+  <section>
+    <header>
+      <h1 class="title">{{ page.title }}</h1>
+      {% if page.audio %}
+      <audio controls="controls">
+        <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
+        <p>Please use a newer browser version to hear the audio recording.</p>
+      </audio>
+      {% endif %}
+    </header>
+    <p>
+      <strong>Featured link: <a href="{{ page.link }}">{{ page.title }}</a></strong>
+    </p>
+    {{ content }}
+  </section>
 </article>
 
 <!-- Disqus -->
