--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,5 +2,5 @@
 layout: post-header
 ---
 <article class="l-reading">
-  <section class="post-content">{{ content }}</section>
+  <section>{{ content }}</section>
 </article>
