deleted unused files.

--- a/css/style.scss
+++ b/css/style.scss
@@ -21,12 +21,12 @@
 // **********
 @import "utilities/helpers";
 @import "utilities/mixins";
+@import "state";
 
 // Base
 // *****
 @import "base/base";
 @import "base/typography";
-@import "base/utility";
 
 // Layout
 // *******
@@ -38,9 +38,7 @@
 @import "components/footer";
 @import "components/feature";
 @import "components/header";
-@import "components/icons";
 @import "components/images";
-@import "components/list";
 @import "components/nav";
 @import "components/pager";
 @import "components/section";
