--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: post-header
 </article>
 
 <!-- Disqus -->
-{% if site.theme.disqus_shortname %}
+{% if site.config.disqus_shortname %}
 <aside class="l-reading">
   {% include disqus.html %}
 </aside>
