--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 
-{% if site.theme.footer_text %}
+{% if site.config.footer_text %}
 <footer class="footer">
-  <p class="text">{{ site.theme.footer_text }}</p>
+  <p class="text">{{ site.config.footer_text }}</p>
 </footer>
 {% endif %}
