--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -13,6 +13,6 @@
         {% endfor %}
       </ul>
     </nav>
-    <a href="{{ site.baseurl }}/" class="h1 link--simple">{{ site.theme.title }}</a>
+    <a href="{{ site.baseurl }}/" class="h1 link--simple">{{ site.config.title }}</a>
   </div>
 </header>
