--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,158 +1,158 @@
-{% if site.theme.rss %}
+{% if site.config.rss %}
 <li>
-	<a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="{{ site.theme.str_rss_follow }}">
+	<a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="{{ site.config.str_rss_follow }}">
 		{% include social-icons/rss.svg %}
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.email_address %}
+{% if site.config.email_address %}
 <li>
-	<a href="mailto:{{ site.theme.email_address }}" title="{{ site.theme.str_email }}">
+	<a href="mailto:{{ site.config.email_address }}" title="{{ site.config.str_email }}">
 		{% include social-icons/envelope.svg %}
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.behance %}
+{% if site.config.behance %}
 <li>
-	<a href="https://www.behance.net/{{ site.theme.behance }}" title="{{ site.theme.str_follow_on }} Behance">
+	<a href="https://www.behance.net/{{ site.config.behance }}" title="{{ site.config.str_follow_on }} Behance">
 		<i class="fa fa-fw fa-behance"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.bitbucket %}
+{% if site.config.bitbucket %}
 <li>
-	<a href="https://bitbucket.org/{{ site.theme.bitbucket }}" title="{{ site.theme.str_follow_on }} Bitbucket">
+	<a href="https://bitbucket.org/{{ site.config.bitbucket }}" title="{{ site.config.str_follow_on }} Bitbucket">
 		<i class="fa fa-fw fa-bitbucket"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.dribbble %}
+{% if site.config.dribbble %}
 <li>
-	<a href="https://dribbble.com/{{ site.theme.dribbble }}" title="{{ site.theme.str_follow_on }} Dribbble">
+	<a href="https://dribbble.com/{{ site.config.dribbble }}" title="{{ site.config.str_follow_on }} Dribbble">
 		<i class="fa fa-fw fa-dribbble"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.facebook %}
+{% if site.config.facebook %}
 <li>
-	<a href="https://www.facebook.com/{{ site.theme.facebook }}" title="{{ site.theme.str_follow_on }} Facebook">
+	<a href="https://www.facebook.com/{{ site.config.facebook }}" title="{{ site.config.str_follow_on }} Facebook">
 		<i class="fa fa-fw fa-facebook"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.flickr %}
+{% if site.config.flickr %}
 <li>
-	<a href="https://www.flickr.com/photos/{{ site.theme.flickr }}" title="{{ site.theme.str_follow_on }} Flickr">
+	<a href="https://www.flickr.com/photos/{{ site.config.flickr }}" title="{{ site.config.str_follow_on }} Flickr">
 		<i class="fa fa-fw fa-flickr"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.github %}
+{% if site.config.github %}
 <li>
-	<a href="https://github.com/{{ site.theme.github }}" title="{{ site.theme.str_follow_on }} GitHub">
+	<a href="https://github.com/{{ site.config.github }}" title="{{ site.config.str_follow_on }} GitHub">
 		{% include social-icons/github.svg %}
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.google_plus %}
+{% if site.config.google_plus %}
 <li>
-	<a href="https://plus.google.com/{{ site.theme.google_plus }}" title="{{ site.theme.str_follow_on }} Google+">
+	<a href="https://plus.google.com/{{ site.config.google_plus }}" title="{{ site.config.str_follow_on }} Google+">
 		<i class="fa fa-fw fa-google-plus"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.instagram %}
+{% if site.config.instagram %}
 <li>
-	<a href="http://instagram.com/{{ site.theme.instagram }}" title="{{ site.theme.str_follow_on }} Instagram">
+	<a href="http://instagram.com/{{ site.config.instagram }}" title="{{ site.config.str_follow_on }} Instagram">
 		<i class="fa fa-fw fa-instagram"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.linkedin %}
+{% if site.config.linkedin %}
 <li>
-	<a href="{{ site.theme.linkedin }}" title="{{ site.theme.str_follow_on }} LinkedIn">
+	<a href="{{ site.config.linkedin }}" title="{{ site.config.str_follow_on }} LinkedIn">
 		{% include social-icons/linkedin.svg %}
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.pinterest %}
+{% if site.config.pinterest %}
 <li>
-	<a href="http://www.pinterest.com/{{ site.theme.pinterest }}" title="{{ site.theme.str_follow_on }} Pinterest">
+	<a href="http://www.pinterest.com/{{ site.config.pinterest }}" title="{{ site.config.str_follow_on }} Pinterest">
 		<i class="fa fa-fw fa-pinterest"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.reddit %}
+{% if site.config.reddit %}
 <li>
-	<a href="https://www.reddit.com/user/{{ site.theme.reddit }}" title="{{ site.theme.str_follow_on }} Reddit">
+	<a href="https://www.reddit.com/user/{{ site.config.reddit }}" title="{{ site.config.str_follow_on }} Reddit">
 		<i class="fa fa-fw fa-reddit"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.soundcloud %}
+{% if site.config.soundcloud %}
 <li>
-	<a href="https://soundcloud.com/{{ site.theme.soundcloud }}" title="{{ site.theme.str_follow_on }} SoundCloud">
+	<a href="https://soundcloud.com/{{ site.config.soundcloud }}" title="{{ site.config.str_follow_on }} SoundCloud">
 		<i class="fa fa-fw fa-soundcloud"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.stack_exchange %}
+{% if site.config.stack_exchange %}
 <li>
-	<a href="{{ site.theme.stack_exchange }}" title="{{ site.theme.str_follow_on }} Stack Exchange">
+	<a href="{{ site.config.stack_exchange }}" title="{{ site.config.str_follow_on }} Stack Exchange">
 		{% include social-icons/stack-exchange.svg %}
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.steam %}
+{% if site.config.steam %}
 <li>
-	<a href="http://steamcommunity.com/id/{{ site.theme.steam }}" title="{{ site.theme.str_follow_on }} Steam">
+	<a href="http://steamcommunity.com/id/{{ site.config.steam }}" title="{{ site.config.str_follow_on }} Steam">
 		<i class="fa fa-fw fa-steam"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.tumblr %}
+{% if site.config.tumblr %}
 <li>
-	<a href="http://{{ site.theme.tumblr }}.tumblr.com/" title="{{ site.theme.str_follow_on }} Tumblr">
+	<a href="http://{{ site.config.tumblr }}.tumblr.com/" title="{{ site.config.str_follow_on }} Tumblr">
 		<i class="fa fa-fw fa-tumblr"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.twitter %}
+{% if site.config.twitter %}
 <li>
-	<a href="https://twitter.com/{{ site.theme.twitter }}" title="{{ site.theme.str_follow_on }} Twitter">
+	<a href="https://twitter.com/{{ site.config.twitter }}" title="{{ site.config.str_follow_on }} Twitter">
 		{% include social-icons/twitter.svg %}
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.wordpress %}
+{% if site.config.wordpress %}
 <li>
-	<a href="https://{{ site.theme.wordpress }}.wordpress.com/" title="{{ site.theme.str_follow_on }} WordPress">
+	<a href="https://{{ site.config.wordpress }}.wordpress.com/" title="{{ site.config.str_follow_on }} WordPress">
 		<i class="fa fa-fw fa-wordpress"></i>
 	</a>
 </li>
 {% endif %}
 
-{% if site.theme.youtube %}
+{% if site.config.youtube %}
 <li>
-	<a href="https://www.youtube.com/user/{{ site.theme.youtube }}" title="{{ site.theme.str_follow_on }} YouTube">
+	<a href="https://www.youtube.com/user/{{ site.config.youtube }}" title="{{ site.config.str_follow_on }} YouTube">
 		<i class="fa fa-fw fa-youtube"></i>
 	</a>
 </li>
