Fixed outer padding issues.

--- a/_layouts/post-header.html
+++ b/_layouts/post-header.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include header-post.html %}
-    <main class="content l-container">
+    <main class="l-container">
       {{ content }}
     </main>
     {% include footer.html %}
