Link post template and remote working post.

--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -12,8 +12,8 @@ layout: default
       </audio>
       {% endif %}
     </header>
-    <p>
-      <strong>Featured link: <a href="{{ page.link }}">{{ page.title }}</a></strong>
+    <p class="h2">
+      <strong>Link: <a href="{{ page.link }}">{{ page.title }} from {{ page.source }}</a></strong>
     </p>
     {{ content }}
   </section>
