--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -24,6 +24,7 @@ main {
 %heading {
   margin: .25em 0 .75em;
   font-family: $font-family-headings;
+  font-weight: normal;
   line-height: 1.1;
 }
 
