--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -1,5 +1,9 @@
 .footer {
-  @extend %bottom-gutter;
-  color: $text-color;
+  @include pad;
+  @include padding($gutter null);
+  background-color: $grey-dark;
+  color: $banner-color;
   text-align: center;
+
+  a { @extend %banner-links; }
 }
