Updated Bourbon and Neat. Added Neat variables.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,3 +69,9 @@ $feature-bg-size: cover;
 // *******
 $max-width: 50rem;
 $reading-width: 40rem;
+
+// Neat layout variables
+$column: 5rem;
+$gutter: 1.25rem;
+$grid-columns: 12;
+$max-width: 75rem;
