--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="l-reading">
+<section>
   <header>
     <h1 class="title">{{ page.title }}</h1>
     {% if page.audio %}
