--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="l-reading">
+<article>
   <section>
     <header>
       <h1 class="title">{{ page.title }}</h1>
