--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="l-reading">
+<article>
   <header>
     <h1 class="title">{{ page.title }}</h1>
     {% if page.audio %}
