--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="l-reading">
+<article>
   <section>
     <header>
       <h1 class="title">{{ page.title }}</h1>
@@ -18,7 +18,7 @@ layout: default
 
 <!-- Disqus -->
 {% if site.config.disqus_shortname %}
-<aside class="l-reading">
+<aside>
   {% include disqus.html %}
 </aside>
 {% endif %}
