--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -1,7 +1,6 @@
 // Buttons
-.button {
+button {
   display: inline-block;
-  margin: 1em 0;
   padding: .5em .75em;
   border: 1px solid;
   border-radius: .3em;
