--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -1,22 +1,20 @@
 .feature {
-  @include fill-parent();
-  margin-bottom: $gutter;
-
   @media (min-width: $bp-hands-wide) {
-    @include row;
     @include margin(null auto);
+    display: flex;
   }
 
   .feature__image,
   .feature__description {
     @media (min-width: $bp-hands-wide) {
-      @include span-columns(6 of 12);
+      width: calc(50% - #{$gutter});
+      width: 48%;
+      margin-right: $gutter;
+
+      &:nth-of-type(-n+2) { margin-top: 0; }
+      &:last-child { margin-right: 0; }
     }
   }
 
-  .feature__description {
-    @include pad;
-    margin-bottom: 0;
-    text-align: center;
-  }
+  .feature__description { text-align: center; }
 }
